Added small tweaks to the page for SEO purposes

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta 
+      name="keywords" 
+      content="Full Stack Software Engineer, Full Stack Application Developer, Web Developer, Full Stack Software Developer, Developer, Engineer, Application Developer, Front End Developer">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to the personal website of Preston Doris, Full Stack Software Engineer, developing software, applications and web experiences professionally in the San Francisco Bay Area."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
@@ -25,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Preston Doris</title>
+    <title>Preston Doris | Full Stack Software Engineer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
